--- a/Class2/index.html
+++ b/Class2/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Foundations - Part 1</title>
+  <link rel="stylesheet" href="./styles.css">
+ 
 </head>
 <body>
     
     <!-- JAVASCRIPT -->
     <script src="./operators.js"></script>
+    <script src="./comparisons.js"></script>
+    <script src="./conditionals_flows_loops.js"></script>
+
 </body>
 </html>
