--- a/Class3/exercise2/index.html
+++ b/Class3/exercise2/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button onclick="showUserObject({firstname: 'Joe', lastname: 'Blow'})">Clicker</button>
 <script src="./main.js"></script>
 </body>
 </html>
