--- a/Class3/betterbutton/index.html
+++ b/Class3/betterbutton/index.html
@@ -29,39 +29,16 @@
   </head>
   <body>
     <button type="button" class="btn-crazy btn btn-lg btn-danger">
-      Click Me
+      How about this one?
     </button>
     <button type="button" class="btn-crazy btn btn-lg btn-primary">
-      Click Me
+      Can't click me?
     </button>
     <button type="button" class="btn-crazy btn btn-lg btn-success">
       Click Me
     </button>
 
     <!-- Start Javascript -->
-    <script>
-      // grab everything we need
-      const crazyButtons = document.querySelectorAll(".btn-crazy");
-
-      // define our functions
-      function goCrazy() {
-        // get a random number for the left offset
-        // get a random number for the top offset
-        const offsetLeft =
-          Math.random() * (window.innerWidth - this.clientWidth);
-
-        const offsetTop =
-          Math.random() * window.innerHeight - this.clientHeight;
-
-        // apply those numbers to the button
-        this.style.top = offsetTop + "px";
-        this.style.left = offsetLeft + "px";
-      }
-
-      // add event listeners
-      crazyButtons.forEach((button) =>
-        button.addEventListener("mouseenter", goCrazy)
-      );
-    </script>
+    <script src="./main.js"></script>
   </body>
 </html>
