End of Class 3 code

--- a/Class3/betterscrolling/index.html
+++ b/Class3/betterscrolling/index.html
@@ -21,128 +21,75 @@
       .jumbotron {
         padding: 30px;
       }
-      html {
-        overflow-y: scroll;
-      }
       body {
         background: #efefef;
       }
-      ul {
-        margin-bottom: 0;
+      .content {
+        background: #fff;
+        padding: 50;
+        font-size: 19px;
+        line-height: 1.5;
+        min-height: 3000px;
       }
-      .accordion {
-        background: #ffffff;
-        border-radius: 5px;
-        padding: 30px;
-      }
-      .question {
-        border-top: 1px solid #eee;
-        padding: 20px;
-        cursor: pointer;
-        position: relative;
-      }
-      .question h2 {
-        font-size: 20px;
-        margin: 0;
-        color: #c00c00;
-      }
-      .question .glyphicon {
-        position: absolute;
-        right: 20px;
+      .scroll-line {
+        position: fixed;
         top: 0;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        color: #c00c00;
-        transition: 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-      }
-      .answer {
-        max-height: 0;
-        overflow: hidden;
-        transition: 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-      }
-      .answer p {
-        padding: 20px;
-      }
-      * .accordion li.open .question .glyphicon {
-        transform: rotate(180deg);
-      }
-      * .accordion li.open .answer {
-        max-height: 150px;
+        left: 0;
+        height: 8px;
+        background: #1ce;
+        transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) width;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="accordion">
-        <ul class="list-unstyled">
-          <li>
-            <div class="question">
-              <h2>Will I be rich?</h2>
-              <span class="glyphicon glyphicon-chevron-down icon"></span>
-            </div>
-            <div class="answer">
-              <p>
-                Absolutely! Lorem ipsum dolor, sit amet consectetur adipisicing
-                elit. Cum ut, quibusdam delectus quasi itaque iste dolor nobis
-                sunt harum deleniti illo praesentium iure inventore repudiandae
-                quidem eaque optio molestias excepturi!
-              </p>
-            </div>
-          </li>
-          <li>
-            <div class="question">
-              <h2>What's for dinner?</h2>
-              <span class="glyphicon glyphicon-chevron-down"></span>
-            </div>
-            <div class="answer">
-              <p>
-                Steak! Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Cum ut, quibusdam delectus quasi itaque iste dolor nobis sunt
-                harum deleniti illo praesentium iure inventore repudiandae
-                quidem eaque optio molestias excepturi!
-              </p>
-            </div>
-          </li>
-          <li>
-            <div class="question">
-              <h2>Is Javascript awesome?</h2>
-              <span class="glyphicon glyphicon-chevron-down"></span>
-            </div>
-            <div class="answer">
-              <p>
-                You betcha! Lorem ipsum dolor, sit amet consectetur adipisicing
-                elit. Cum ut, quibusdam delectus quasi itaque iste dolor nobis
-                sunt harum deleniti illo praesentium iure inventore repudiandae
-                quidem eaque optio molestias excepturi!
-              </p>
-            </div>
-          </li>
-        </ul>
+    <div class="scroll-line"></div>
+
+    <div class="contanier">
+      <div class="content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+        voluptas fuga laudantium praesentium reprehenderit veritatis, possimus
+        odit quaerat atque eum recusandae explicabo commodi totam beatae
+        perferendis necessitatibus ipsa distinctio quibusdam!
       </div>
     </div>
 
     <!-- Start Javascript -->
     <script>
       // grab what we need
-      const accordion = document.querySelector(".accordion");
-      const items = accordion.querySelectorAll("li");
-      const question = accordion.querySelectorAll(".question");
+      const scrollLine = document.querySelector(".scroll-line");
 
-      function toggleAccordion() {
-        const thisItem = this.parentNode;
+      function fillScrollLine() {
+        const windowHeight = window.innerHeight;
+        const fullHeight = document.body.clientHeight;
+        const scrolled = window.scrollY;
+        const percentScrolled = (scrolled / (fullHeight - windowHeight)) * 100;
 
-        items.forEach((item) => {
-          if (thisItem == item) {
-            thisItem.classList.toggle("open");
-            return;
-          }
-          item.classList.remove("open");
-        });
+        scrollLine.style.width = percentScrolled + "%";
+        // scrollLine.style.width = `${percentScrolled}%`;
       }
-      question.forEach((question) =>
-        question.addEventListener("click", toggleAccordion)
-      );
+      window.addEventListener("scroll", debounce(fillScrollLine));
+
+      function debounce(func, wait = 15, immediate) {
+        var timeout;
+
+        return function executedFunction() {
+          var context = this;
+          var args = arguments;
+
+          var later = function () {
+            timeout = null;
+            if (!immediate) func.apply(context, args);
+          };
+
+          var callNow = immediate && !timeout;
+
+          clearTimeout(timeout);
+
+          timeout = setTimeout(later, wait);
+
+          if (callNow) func.apply(context, args);
+        };
+      }
     </script>
   </body>
 </html>
