--- a/Class3/accordion/index.html
+++ b/Class3/accordion/index.html
@@ -20,7 +20,6 @@
       crossorigin="anonymous"
     ></script>
   </head>
-
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -39,10 +38,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a href="././dom/index.html" class="nav-link active"
-                >DOM events</a
-              >
-              <a href="dom/index.html" class="nav-link active">no ./</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../dom/index.html"
+                >DOM events
+              </a>
             </li>
           </ul>
         </div>
