Show floater issue: console.logging input

--- a/Class4/better/index.html
+++ b/Class4/better/index.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Bookmarks app</title>
+
         <link
             rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
             crossorigin="anonymous"
         />
+
         <style>
             body,
             .jumbotron {
@@ -20,20 +22,17 @@
                 background-image: url("img/bkg.jpg");
                 background-size: cover;
             }
-            .content {
+            .floater {
+                background: #fff;
                 font-size: 19px;
                 line-height: 1.5;
+                border-radius: 5px;
                 max-width: 500px;
                 margin: 0 auto;
                 position: relative;
-                border-radius: 5px;
-            }
-            .floater {
-                background: #fff;
                 transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.4) all;
-                margin-bottom: 30px;
-                z-index: 11;
             }
+
             .floater input[type="text"] {
                 padding: 30px 20px;
                 border: none;
@@ -56,93 +55,38 @@
                 left: 0;
                 background: rgba(0, 0, 0, 0.8);
                 width: 100%;
+                height: 100%;
                 opacity: 0;
                 transition: 0.3s ease opacity;
-                z-index: 10;
-                pointer-events: none;
             }
             body.show-floater .floater {
                 transform: scale(1.1);
             }
             body.show-floater .floater input[type="text"] {
                 padding: 50px 20px;
-                font-size: 18px;
+                font-size: 08px;
             }
             body.show-floater .overlay {
                 opacity: 1;
-                pointer-events: all;
-            }
-            /* +++++++++++  Bookmark Stuff  +++++++++++*/
-            .bookmarks-list {
-                position: relative;
-                z-index: 9;
-            }
-            .bookmark {
-                display: flex;
-                background: #fff;
-                position: relative;
-                color: #999;
-                transition: 0.3s ease all;
-                border-bottom: 1px solid #ddd;
-                font-size: 16px;
-            }
-            .bookmark:hover {
-                color: #1ce;
-                text-decoration: none;
-            }
-            .bookmark:first-child {
-                border-top-left-radius: 5px;
-                border-top-right-radius: 5px;
-            }
-            .bookmark:last-child {
-                border-bottom-left-radius: 5px;
-                border-bottom-right-radius: 5px;
-                border-bottom: 0;
-            }
-            .bookmark .img {
-                background-color: #ddd;
-                border-radius: 3px;
-                background-image: url("https://avatars.githubusercontent.com/u/47424009?v=4");
-                background-size: cover;
-                width: 120px;
-                height: 80px;
-                margin-right: 20px;
-            }
-            .bookmark .title {
-                display: flex;
-                align-items: center;
-            }
-            .bookmark .glyphicon-remove {
-                position: absolute;
-                top: 10px;
-                right: 10px;
-                color: #eee;
-                font-size: 12px;
-                transition: 0.3x ease color;
-                cursor: pointer;
-            }
-            .bookmark:hover .glyphicon-remove {
-                color: #aaa;
             }
         </style>
     </head>
     <body>
         <div class="overlay"></div>
-        <div class="floater content">
-            <form class="bookmark-form">
-                <div class="floater-top">
-                    <input type="submit" class="form-control" />
-                </div>
 
-                <div class="floater-button">
-                    <button type="submit" class="btn btn-primary btn-sm">
-                        Add
-                    </button>
-                </div>
-            </form>
+        <div class="floater-top">
+            <input
+                type="text"
+                class="form-control"
+                placeholder="What's on your mind?"
+                id="form-id"
+            />
         </div>
-        <div class="bookmarks-list content"></div>
+        <div class="floater-bottom">
+            <button type="button" class="btn btn-primary btn-sm">Add</button>
+        </div>
 
+        <!-- Start Javascript -->
         <script src="./main.js"></script>
     </body>
 </html>
