--- a/Class4/betterbookmarks/index.html
+++ b/Class4/betterbookmarks/index.html
@@ -18,19 +18,23 @@
             .jumbotron {
                 padding: 30px;
             }
+            .content {
+                font-size: 19px;
+                line-height: 1.5;
+                max-width: 500px;
+                margin: 0 auto;
+                position: relative;
+                border-radius: 5px;
+            }
             body {
                 background-image: url("img/bkg.jpg");
                 background-size: cover;
             }
             .floater {
                 background: #fff;
-                font-size: 19px;
-                line-height: 1.5;
-                border-radius: 5px;
-                max-width: 500px;
-                margin: 0 auto;
-                position: relative;
                 transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.4) all;
+                margin-bottom: 0;
+                z-index: 11;
             }
 
             .floater input[type="text"] {
@@ -58,38 +62,73 @@
                 height: 100%;
                 opacity: 0;
                 transition: 0.3s ease opacity;
+                z-index: 10;
+                pointer-events: none;
             }
             body.show-floater .floater {
                 transform: scale(1.1);
             }
             body.show-floater .floater input[type="text"] {
                 padding: 50px 20px;
-                font-size: 08px;
+                font-size: 18px;
             }
             body.show-floater .overlay {
                 opacity: 1;
+                pointer-events: all;
+            }
+
+            /* ++++++++++++  Bookmarks styles ++++++++++++ */
+
+            .bookmarks-list {
+                position: relative;
+                z-index: 9;
+            }
+
+            .bookmark {
+                display: block;
+                background: #fff;
+                color: #999;
+                padding: 20px;
+                transition: 0.3s ease all;
+                border-bottom: 1px solid #ddd;
+            }
+            .bookmark:hover {
+                color: #1ce;
+                text-decoration: none;
+            }
+            .bookmark:first-child {
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+            }
+            .bookmark:last-child {
+                border-bottom-left-radius: 5px;
+                border-bottom-right-radius: 5px;
+                border-bottom: 0;
             }
         </style>
     </head>
     <body>
         <div class="overlay"></div>
-        <div class="floater">
-            <div class="floater-top">
-                <input
-                    type="text"
-                    class="form-control"
-                    placeholder="What's on your mind?"
-                    id="form-id"
-                />
-            </div>
-            <div class="floater-bottom">
-                <button type="button" class="btn btn-primary btn-sm">
-                    Add
-                </button>
-            </div>
-        </div>
 
-        <!-- Start Javascript -->
+        <div class="floater content">
+            <form class="bookmark-form">
+                <div class="floater-top">
+                    <input
+                        type="text"
+                        class="form-control"
+                        placeholder="What's on your mind?"
+                        id="form-id"
+                    />
+                </div>
+                <div class="floater-bottom">
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Add
+                    </button>
+                </div>
+            </form>
+        </div>
+        <div class="bookmarks-list content"></div>
+        <!-- ++++++++++++ Start Javascript  ++++++++++++  -->
         <script src="./main.js"></script>
     </body>
 </html>
