--- a/Class5/index.html
+++ b/Class5/index.html
@@ -4,7 +4,22 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>ere</title>
+        <style>
+            #.container {
+                width: 500px;
+                border: 1px solid black;
+            }
+            #.boxes {
+                width: 300px;
+                float: left; /* add this */
+                border: 1px solid red;
+            }
+            #.title-text {
+                border: 1px solid green;
+                overflow: hidden; /* if you don't want #second to wrap below #first */
+            }
+        </style>
     </head>
     <body>
         <!-- **Aim**: 
@@ -21,7 +36,12 @@
                 </div>
 
                 <div class="text-boxes">
-                    <input type="password" class="username" id="password" />
+                    <input
+                        type="password"
+                        class="username"
+                        id="password"
+                        autocomplete="off"
+                    />
                     <input type="button" value="submit" />
                 </div>
             </form>
