Class 5 names almost working

--- a/Class5/index.html
+++ b/Class5/index.html
@@ -38,10 +38,10 @@
                         onclick="saveLocal()"
                     />
                 </div>
-                <div class="showFormSubmit"></div>
             </form>
         </div>
-
+        <!-- below should show js generated html -->
+        <div class="show-sub"></div>
         <script src="./app.js"></script>
     </body>
 </html>
