After Code coach session

--- a/Class5/userpassword/index.html
+++ b/Class5/userpassword/index.html
@@ -18,7 +18,7 @@
                         type="text"
                         class="username"
                         id="username"
-                        placeholder="Username"
+                        placeholder="Type a username."
                     />
 
                     <input
@@ -26,7 +26,7 @@
                         class="password"
                         id="password"
                         autocomplete="off"
-                        placeholder="Password"
+                        placeholder="Type a password."
                     />
                 </div>
                 <div class="sub">
@@ -41,7 +41,7 @@
             </form>
         </div>
         <!-- below should show js generated html -->
-        <div class="show-sub"></div>
+        <div class="showsub" id="showsub"></div>
         <script src="./app.js"></script>
     </body>
 </html>
