--- a/Class2/functions.html
+++ b/Class2/functions.html
@@ -1,28 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Getting Started with JavaScript</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        >
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        />
         <style>
-            body {padding: 30px;}
+            body {
+                padding: 30px;
+            }
         </style>
     </head>
     <body>
-        
         <div class="jumbotron text-center">
-            <button type="button" class="btn btn-danger" onclick="saySomething('this is the first button')">
-                My Button
-            </button>
-            <button type="button" class="btn btn-danger" onclick="saySomething('this is the second button')">
+            <button
+                type="button"
+                class="btn btn-danger"
+                onclick="saySomething('this is the first button')"
+            >
                 My Button
             </button>
         </div>
+        <div class="jumbotron text-center">
+            <button
+                type="button"
+                class="btn btn-danger"
+                onclick="saySomething('this is the second button')"
+            >
+                My 2nd Button
+            </button>
+        </div>
 
-    <!-- 🔥🔥🔥🔥🔥 start javascript 🔥🔥🔥🔥🔥 -->
-        <script src="./functions.js"></script>
+        <!-- 🔥🔥🔥🔥🔥 start javascript 🔥🔥🔥🔥🔥 -->
+
+        <script>
+            function saySomething(message = "goodbye", whisper = false) {
+                if (whisper) {
+                    //  remember me - passing styles in back tic ES6 style
+                    console.log(`%c${message}`, "font-size:5px");
+                } else {
+                    console.log(message);
+                }
+            }
+            saySomething("hello", true);
+
+            saySomething("somethingelse");
+
+            saySomething();
+
+            // function squared(a) {
+            //     return a * a;
+            // }
+            // const newSquared = squared(3);
+            // console.log(newSquared);
+
+            // remember me
+            // this is a function used as a value of a variable
+            // can be turned into an arrow function
+
+            const squared1 = function (a) {
+                return a * a;
+            };
+
+            // below is same with an arrow function
+
+            const squared2 = (a) => {
+                return a * a;
+            };
+            const otherSquared = squared2;
+        </script>
     </body>
 </html>
