--- a/Class2/index.html
+++ b/Class2/index.html
@@ -1,20 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Foundations - Part 1</title>
-  <link rel="stylesheet" href="./styles.css">
- 
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Javascript Foundations - Part 1</title>
 
-    
-    <!-- JAVASCRIPT -->
-    <script src="./operators.js"></script>
-    <script src="./comparisons.js"></script>
-    <script src="./conditionals_flows_loops.js"></script>
+        <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body>
+        <div class="dogs-list"></div>
+        <!-- JAVASCRIPT -->
+        <script>
+            const name = "chris";
+            const username = "chrisoncode";
 
-</body>
+            // if else
+            // if (name == "nick") {
+            //     console.log("Hello!");
+            // } else {
+            //     console.log("not nick");
+            // }
+
+            // if else if
+            // if (name == "nick" || name == "chris") {
+            //     console.log("Hello!");
+            // } else if (name == "holly") {
+            //     console.log("Hello");
+            // } else {
+            //     console.log("not nick");
+            // }
+
+            // // for loop
+            // const dogsList = document.querySelector(".dogs-list");
+            // const dogs = [
+            //     { name: "bruce", type: "chihuahua" },
+            //     { name: "chance", type: "bernese" },
+            // ];
+
+            // for (let i = 0; i < dogs.length; i++) {
+            //     // grab the dog
+            //     const dog = dogs[i];
+
+            //     const dogData = document.createElement("div");
+            //     dogData.classList.add("jumbotron", "text-center");
+            //     dogData.innerText = `${dog.name} is a ${dog.type}`;
+
+            //     dogsList.appendChild(dogData);
+            // }
+            // // end for loop
+
+            // while loop
+            // const dogsList = document.querySelector(".dogs-list");
+            // const dogs = [
+            //     { name: "bruce", type: "chihuahua" },
+            //     { name: "chance", type: "bernese" },
+            // ];
+            // let i = 0;
+            // while (i < dogs.length) {
+            //     // grab the dog
+            //     const dog = dogs[i];
+
+            //     const dogData = document.createElement("div");
+            //     dogData.classList.add("jumbotron", "text-center");
+            //     dogData.innerText = `${dog.name} is a ${dog.type}`;
+
+            //     dogsList.appendChild(dogData);
+
+            //     i++;
+            // }
+            // end while loop
+
+            // // do while loop
+            // const dogsList = document.querySelector(".dogs-list");
+            // const dogs = [
+            //     { name: "bruce", type: "chihuahua" },
+            //     { name: "chance", type: "bernese" },
+            // ];
+            // let i = 0;
+            // do {
+            //     // grab the dog
+            //     const dog = dogs[i];
+
+            //     const dogData = document.createElement("div");
+            //     dogData.classList.add("jumbotron", "text-center");
+            //     dogData.innerText = `${dog.name} is a ${dog.type}`;
+
+            //     dogsList.appendChild(dogData);
+
+            //     i++;
+            // } while (i < dogs.length);
+
+            // for ... of iterator
+            const dogsList = document.querySelector(".dogs-list");
+            const dogs = [
+                { name: "bruce", type: "chihuahua" },
+                { name: "chance", type: "bernese" },
+            ];
+
+            for (let dog of dogs) {
+                // grab the dog
+
+                const dogData = document.createElement("div");
+                dogData.classList.add("jumbotron", "text-center");
+                dogData.innerText = `${dog.name} is a ${dog.type}`;
+
+                dogsList.appendChild(dogData);
+            }
+        </script>
+    </body>
 </html>
