--- a/Class2/objects.html
+++ b/Class2/objects.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Getting Started with JavaScript</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        >
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        />
         <style>
-            body {padding: 30px;}
+            body {
+                padding: 30px;
+            }
         </style>
     </head>
     <body>
-        
-b
+        <!-- 🔥🔥🔥🔥🔥 start javascript 🔥🔥🔥🔥🔥 -->
+        <script>
+            const hero = {
+                name: "Bruce Wayne",
+                alias: "Batman",
+                catchphrase: "To the Batcave!",
+            };
 
-    <!-- 🔥🔥🔥🔥🔥 start javascript 🔥🔥🔥🔥🔥 -->
-        <script src="./objects.js"></script>
+            // access a property
+            const thingToLookFor = "alias";
+
+            console.log(hero.name); // Bruce Wayne
+            console.log(hero["name"]); // Bruce Wayne
+            // remember me - below passing a variable in using bracket notation
+            // dot notation would not work, it would think this is a property
+            console.log(hero[thingToLookFor]); // Batman
+        </script>
     </body>
 </html>
