--- a/Class2/objects.html
+++ b/Class2/objects.html
@@ -18,10 +18,17 @@
     <body>
         <!-- 🔥🔥🔥🔥🔥 start javascript 🔥🔥🔥🔥🔥 -->
         <script>
+            // remember me - when you put a function inside an object, it is a method
             const hero = {
                 name: "Bruce Wayne",
                 alias: "Batman",
                 catchphrase: "To the Batcave!",
+                speak: function () {
+                    return "Attention! " + this.catchphrase;
+                },
+                attack: function (sound) {
+                    return `(punches bad guy) ${sound}`;
+                },
             };
 
             // access a property
@@ -29,9 +36,13 @@
 
             console.log(hero.name); // Bruce Wayne
             console.log(hero["name"]); // Bruce Wayne
-            // remember me - below passing a variable in using bracket notation
+            // remember me - below passing a variable in using bracket notation.
             // dot notation would not work, it would think this is a property
             console.log(hero[thingToLookFor]); // Batman
+
+            // accessing methods (functions)
+            console.log(hero.speak());
+            console.log(hero.attack("POWWWWW"));
         </script>
     </body>
 </html>
