Objects and Arrays practice

--- a/Class7/objectsAndArrays/index.html
+++ b/Class7/objectsAndArrays/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <!-- <script src="./scripts.js"></script> -->
-        <script src="./this-keyword.js"></script>
+        <!-- <script src="./this-keyword.js"></script> -->
+        <script src="./closures.js"></script>
     </body>
 </html>
