--- a/Class9/index.html
+++ b/Class9/index.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="./scripts.js"></script>
+        <script src="./with-typescript.js"></script>
     </body>
 </html>
