--- a/Class2/conditionals_flows.html
+++ b/Class2/conditionals_flows.html
@@ -7,6 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <script src="./index.js"></script>
+        <script src="./conditionals_flows_loops.js"></script>
     </body>
 </html>
