--- a/SideProjects/session-storage/index.html
+++ b/SideProjects/session-storage/index.html
@@ -5,12 +5,12 @@
         <meta name="viewport" content="width=device-width" />
         <title>sessionStorage</title>
         <script type="text/javascript" src="main.js"></script>
-        <!-- <link
+        <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
             crossorigin="anonymous"
-        /> -->
+        />
     </head>
 
     <body>
